--- a/assets/application.scss
+++ b/assets/application.scss
@@ -13,5 +13,6 @@
 @import "css/sections";
 @import "css/clients";
 @import "css/footer";
+@import "css/problem";
 @import "css/case-studies";
 @import "css/fullpage-false";
