--- a/assets/css/fullpage-false.sass
+++ b/assets/css/fullpage-false.sass
@@ -58,7 +58,7 @@ html.fullpage-false
 
   .navigation
     z-index: 100
-    background: $lightblue
+    background: $lightblue url("img/bg/clear-blue.png")
 
   .nav
     li
