--- a/views/case-studies/problem.haml
+++ b/views/case-studies/problem.haml
@@ -42,6 +42,15 @@
               %p.highligh-pink
                 %b Tanjun:
                 You’re welcome
+            .four.columns
+              .stat.stat-one.stat-hidden
+                .value 1,300
+                .support British athletes
+              .stat.stat-two.stat-hidden
+                %img.image{:src => "/assets/img/case-studies/big-and-bold/old-dudes.png"}
+              .stat.stat-three.stat-hidden
+                .value 500k
+                .support projects
 
 .section
   .sub-section
