--- a/assets/css/font.sass
+++ b/assets/css/font.sass
@@ -68,18 +68,13 @@ h2
     font-family: 'Feature'
     text-align: center
 
-.highligh-blue
+.highlight-blue
   margin: 0.8em 0
   padding: 0
-  b
-    color: $lightblue
 
-.highligh-pink
+.highlight-pink
   margin: 0.8em 0
   padding: 0
-  b
-    color: $pink
-    padding-left: 1.5em
 
 .blue-block
   h2, p
@@ -210,8 +205,8 @@ h2
     p
       font-size: 2.7em
 
-  .highligh-pink,
-  .highligh-blue,
+  .highlight-pink,
+  .highlight-blue,
     margin: 0.6em 0
     b
       padding-left: 0
