--- a/views/case-studies/big-and-bold.haml
+++ b/views/case-studies/big-and-bold.haml
@@ -14,11 +14,11 @@
     #fullpage2
 
       = haml :"sub-navigation"
-      = haml :"case-studies/header"
-      = haml :"case-studies/problem"
-      = haml :"case-studies/solution"
-      = haml :"case-studies/video"
-      = haml :"case-studies/result"
+      = haml :"case-studies/big-and-bold/header"
+      = haml :"case-studies/big-and-bold/problem"
+      = haml :"case-studies/big-and-bold/solution"
+      = haml :"case-studies/big-and-bold/video"
+      = haml :"case-studies/big-and-bold/result"
       = haml :contact
 
   %script{ src: 'https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js' }
