--- a/views/case-studies/campaigns/problem.haml
+++ b/views/case-studies/campaigns/problem.haml
@@ -1,4 +1,4 @@
-.section
+.section.pink
   .sub-section
     .mobile-header.white-bg
       %h1
@@ -11,47 +11,57 @@
       .middle
         .inner
           .row
-            .twelve.columns.split-50-50
+            .eight.columns.split-50-50
 
               .chat-block
-                %p.highlight.highlight-blue.triangle-border.left
-                  %span.chat Panasonic:
-                  You guys seem alright! Wanna work on a UGC campaign for us?
-                %p.highlight.highlight-pink.triangle-border.right
-                  %span.chat Tanjun:
-                  YES! We would like that very much. Thank you!
+                .highlight.highlight-blue.triangle-border.left
+                  %p.brand Panasonic:
+                  %p.chat You guys seem alright! Wanna work on a UGC campaign for us?
+                .highlight.highlight-pink.triangle-border.right
+                  %p.brand Tanjun:
+                  %p.chat YES! We would like that very much. Thank you!
 
               .chat-block
-                %p.highlight.highlight-blue.triangle-border.left
-                  %span.chat Panasonic:
-                  Great! We want you to develop a campaign around Team GB’s ‘Superfans’. Aim is to create excitement around the support for Team GB, building up to and during the Olympic Games.
-                %p.highlight.highlight-pink.triangle-border.right
-                  %span.chat Tanjun:
-                  Well that sounds A…mazing! Any other requirements?
+                .highlight.highlight-blue.triangle-border.left
+                  %p.brand Panasonic:
+                  %p.chat Great! We want you to develop a campaign around Team GB’s ‘Superfans’. Aim is to create excitement around the support for Team GB, building up to and during the Olympic Games.
+                .highlight.highlight-pink.triangle-border.right
+                  %p.brand Tanjun:
+                  %p.chat Well that sounds A…mazing! Any other requirements?
 
               .chat-block
-                %p.highlight.highlight-blue.triangle-border.left
-                  %span.chat Panasonic:
-                  Yep! You need to put the Panasonic brand at the heart of this period of celebration and support.
-                %p.highlight.highlight-pink.triangle-border.right
-                  %span.chat Tanjun:
-                  We thought you might say that! Don’t worry! We know exactly what needs to be done here. To the Bat Cave!!
+                .highlight.highlight-blue.triangle-border.left
+                  %p.brand Panasonic:
+                  %p.chat Yep! You need to put the Panasonic brand at the heart of this period of celebration and support.
+
+
+
+.section
+  .sub-section
+    .outer
+      .middle
+        .inner
+
+          .row
+            .eight.columns.split-50-50
 
               .chat-block
-                %p.highlight.highlight-blue.triangle-border.left
-                  %span.chat Panasonic:
-                  Errr…you have a bat cave? Maybe we’re paying you too much?
-                %p.highlight.highlight-pink.triangle-border.right
-                  %span.chat Tanjun:
-                  It’s not strictly a cave. More an office/studio thingy with an iMac and a collection of tatty 80s film memorabilia!
+                .highlight.highlight-pink.triangle-border.right.single
+                  %p.brand Tanjun:
+                  %p.chat We thought you might say that! Don’t worry! We know exactly what needs to be done here. To the Bat Cave!!
 
               .chat-block
-                %p.highlight.highlight-blue.triangle-border.left
-                  %span.chat Panasonic:
-                  Oh!! Well, that’s disappointing!! Keep all of the money. It sounds like you need it. In fact, have some more! Now get to work monkeys!
-                %p.highlight.highlight-pink.triangle-border.right
-                  %span.chat Tanjun:
-                  Monkeys!!! To your typewriters!!
+                .highlight.highlight-blue.triangle-border.left
+                  %p.brand Panasonic:
+                  %p.chat Errr…you have a bat cave? Maybe we’re paying you too much?
+                .highlight.highlight-pink.triangle-border.right
+                  %p.brand Tanjun:
+                  %p.chat It’s not strictly a cave. More an office/studio thingy with an iMac and a collection of tatty 80s film memorabilia!
 
-
-
+              .chat-block
+                .highlight.highlight-blue.triangle-border.left
+                  %p.brand Panasonic:
+                  %p.chat Oh!! Well, that’s disappointing!! Keep all of the money. It sounds like you need it. In fact, have some more! Now get to work monkeys!
+                .highlight.highlight-pink.triangle-border.right
+                  %p.brand Tanjun:
+                  %p.chat Monkeys!!! To your typewriters!!
